# 0x59

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml
docs/: DEVELOPMENT.md  INSTALL.md  README.md  ROADMAP.md  USAGE.md  brainstorm-design.md  specs.md
src/zx59/: __init__.py  cli.py  context.py  coordinator.py  db.py  errors.py  export.py  notify.py  prompt.py  runner.py  schema.py
tests/: conftest.py  test_cli.py  test_context.py  test_coordinator.py  test_db.py  test_export.py  test_notify.py  test_prompt.py  test_runner.py  test_schema.py
