[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zx59"
version = "0.1.0"
description = "Lightweight inter-agent communication for Claude Code instances"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]

[project.scripts]
"0x59" = "zx59.cli:main"

[project.urls]
Homepage = "https://github.com/pezware/0x59"
Repository = "https://github.com/pezware/0x59"
Issues = "https://github.com/pezware/0x59/issues"

[tool.hatchling.build]
packages = ["src/zx59"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.coverage.run]
source = ["src/zx59"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
